# squares_test_qt_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/qttest/: EventListenerScene.h  MainWindow.h  Util.h
include/qttest/squares/: SquareController.h  SquareManager.h
src/qttest/: EventListenerScene.cpp  MainWindow.cpp  Util.cpp  main.cpp
src/qttest/squares/: SquareController.cpp  SquareManager.cpp
